--- a/curriculum/templates/curriculum/venta.html
+++ b/curriculum/templates/curriculum/venta.html
@@ -65,25 +65,30 @@
                 </div>
                 
                 <div class="mb-4">
-                    <span class="text-[10px] font-black uppercase px-2.5 py-1 rounded-md shadow-sm
-                        {% if item.estado == 'Nuevo' %} bg-blue-100 text-blue-700
-                        {% elif item.estado == 'Bueno' %} bg-green-100 text-green-700
-                        {% elif item.estado == 'Regular' %} bg-orange-100 text-orange-700
-                        {% else %} bg-gray-100 text-gray-600 {% endif %}">
-                        {{ item.estado }}
+                    <span class="text-[10px] font-black uppercase px-2.5 py-1 rounded-md shadow-sm border
+                        {% if item.estado == 'Nuevo' %} 
+                         bg-blue-50 text-blue-600 border-blue-200 
+                        {% elif item.estado == 'Bueno' %} 
+                        bg-emerald-100 text-emerald-700 border-emerald-200
+                        {% elif item.estado == 'Regular' %} 
+                        bg-amber-100 text-amber-700 border-amber-200
+                        {% else %} 
+                        bg-gray-100 text-gray-600 border-gray-200 
+                        {% endif %}">
+                    {{ item.estado }}
                     </span>
 
-                    {% if item.stock > 0 %}
-                    <span class="text-xs font-bold text-green-500 uppercase ml-2 italic">Disponible: {{ item.stock }}</span>
-                    {% else %}
-                    <span class="text-xs font-bold text-red-500 uppercase ml-2 italic">Agotado</span>
-                    {% endif %}
+    {% if item.stock > 0 %}
+    <span class="text-xs font-bold text-green-500 uppercase ml-2 italic">Disponible: {{ item.stock }}</span>
+    {% else %}
+    <span class="text-xs font-bold text-red-500 uppercase ml-2 italic">Agotado</span>
+    {% endif %}
 
-                    <div class="text-[10px] text-gray-400 mt-3 flex items-center gap-1 font-medium">
-                        <i data-lucide="calendar" class="w-3 h-3"></i>
-                        Publicado el {{ item.fecha_publicacion|date:"d/m/Y" }}
-                    </div>
-                </div>
+    <div class="text-[10px] text-gray-400 mt-3 flex items-center gap-1 font-medium">
+        <i data-lucide="calendar" class="w-3 h-3"></i>
+        Publicado el {{ item.fecha_publicacion|date:"d/m/Y" }}
+    </div>
+</div>
 
                 <a href="https://wa.me/593998136345?text=Hola,%20me%20interesa:%20{{ item.nombre_producto }}" target="_blank" class="mt-auto w-full py-4 bg-[#F0F4F5] text-[#1a1a1a] font-black rounded-xl hover:bg-[#5A7D84] hover:text-white transition-all text-center uppercase tracking-widest text-xs flex items-center justify-center gap-2 group/btn">
                     Solicitar Info <i data-lucide="arrow-right" class="w-4 h-4 group-hover/btn:translate-x-1 transition-transform"></i>
